--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -7,9 +7,6 @@ $white: #fff;
 $black: #000000;
 $primary: #55A603;
 
-html {
-	// overflow-x: hidden;
-}
 body {
 	font-family: $font-primary;
 	background: $black;
@@ -302,7 +299,6 @@ header{
 		float: left;
 		.colorlib-logo{
 			font-size: 20px;
-			text-transform: uppercase;
 			color: $white;
 			font-weight: 400;
 			letter-spacing: 5px;
@@ -358,7 +354,7 @@ header{
 	  height: 2px;
 	  color: $black;
 	  font:bold 14px/.4 Helvetica;
-	  text-transform: uppercase;
+	  
 	  text-indent:-55px;
 	  background: $white;
 	  transition: all .2s ease-out;
@@ -546,7 +542,7 @@ header{
 					color: $white;
 					line-height: 1.2;
 					font-weight: 700;
-					text-transform: uppercase;
+					
 					letter-spacing: 10px;
 					display: inline-block;
 					position: relative;
@@ -562,7 +558,7 @@ header{
 					a.scroll{
 						color: rgba(255,255,255,.6);
 						font-weight: 400;
-						text-transform: uppercase;
+						
 						letter-spacing: 4px;
 					}
 					strong{
@@ -573,7 +569,7 @@ header{
 					}
 				}
 				.breadcrumbs{
-					text-transform: uppercase;
+					
 					font-size: 13px;
 					letter-spacing: 1px;
 					span{
@@ -740,7 +736,7 @@ header{
 			bottom: 0;
 			font-weight: 700!important;
 			color: rgba(255,255,255,.08);
-			text-transform: uppercase;
+			
 			@include media-breakpoint-up(lg){
 				font-size: 10em;
 			}
@@ -859,7 +855,7 @@ header{
 	.media-body{
 		.heading{
 			font-size: 22px;
-			// text-transform: uppercase;
+			// 
 		}
 	}
 }
@@ -926,7 +922,7 @@ textarea.form-control {
 			width: 100%!important;
 		}
 		a {
-			text-transform: uppercase;
+			
 			font-size: 14px;
 			letter-spacing: .2em;
 			color: #ccc;
@@ -953,7 +949,7 @@ textarea.form-control {
 .ftco-section {
 	.ftco-sub-title {
 		font-size: 16px;
-		text-transform: uppercase;
+		
 		letter-spacing: .5em;
 		color: lighten(#ccc, 3%);
 		font-family: $font-family-sans-serif;
@@ -989,9 +985,6 @@ textarea.form-control {
 	img{
 		border-radius: 50%;
 	}
-	.bio{
-
-	}
 }
 
 
@@ -1009,7 +1002,6 @@ textarea.form-control {
 	background: $black;
 	padding: 8em 0;
 	.ftco-footer-logo {
-		text-transform: uppercase;
 		letter-spacing: .1em;
 	}
 	.ftco-footer-widget {
@@ -1144,7 +1136,7 @@ textarea.form-control {
 
 .heading-section{
 	span{
-		text-transform: uppercase;
+		
 		letter-spacing: 5px;
 	}
 	h2{
@@ -1193,10 +1185,7 @@ textarea.form-control {
 }
 
 .ftco-counter {
-	.icon{
-		span{
-		}
-	}
+	
 	.text{
 		display: block;
 		width: 100%;
@@ -1208,9 +1197,6 @@ textarea.form-control {
 				font-size: 80px;
 			}
 		}
-		span{
-			
-		}
 	}
 	.counter-wrap{
 		@include media-breakpoint-down(sm){
@@ -1220,7 +1206,7 @@ textarea.form-control {
 	}
 	.ftco-label {
 		font-size: 18px;
-		text-transform: uppercase;
+		
 		letter-spacing: .1em;
 	}
 }
@@ -1257,8 +1243,6 @@ textarea.form-control {
 				}
 			}
 		}
-		.meta-chat{
-		}
 	}
 	.meta {
 		> div {
@@ -1269,8 +1253,6 @@ textarea.form-control {
 			a {
 				font-size: 15px;
 				color: darken($white,45%);
-				&:hover {
-				}
 			}
 		}
 	}
@@ -1288,9 +1270,7 @@ textarea.form-control {
 		}
 	}
 	.media-body {
-		.heading {
-
-		}
+		
 		p {
 			font-size: 16px;
 		}
@@ -1299,8 +1279,7 @@ textarea.form-control {
 
 //### .block-18 
 .block-18 {
-	.icon, .text {
-	}
+	
 	.icon {
 		> span {
 			font-size: 40px;
@@ -1362,7 +1341,7 @@ textarea.form-control {
 	.heading-2 {
 		font-size: 16px;
 		font-weight: normal;
-		text-transform: uppercase;
+		
 	}
 	.price {
 		margin: 0;
@@ -1379,9 +1358,6 @@ textarea.form-control {
 	.excerpt {
 		margin-bottom: 20px;
 		color: darken(#ccc, 10%);
-	}
-	.label2 {
-		text-transform: uppercase;
 	}
 	.pricing-text {
 		margin-bottom: 0;
@@ -1519,7 +1495,6 @@ textarea.form-control {
 			a{
 				color: lighten($primary,0);
 			}
-			span{}
 		}
 	}
 }
@@ -1529,8 +1504,6 @@ textarea.form-control {
 		outline: none!important;
 		box-shadow: none!important;
 		font-size: 15px;
-	}
-	#map {
 	}
 }
 
@@ -1570,7 +1543,7 @@ textarea.form-control {
 	.text {
 		.subheading {
 			font-size: 13px;
-			text-transform: uppercase;
+			
 			letter-spacing: .1em;
 			color: darken($white,45%);
 		}
@@ -1649,7 +1622,7 @@ textarea.form-control {
 /* Blog*/
 .post-info {
 	font-size: 12px;
-	text-transform: uppercase;
+	
 	font-weight: bold;
 	color: $white;
 	letter-spacing: .1em;
@@ -1666,7 +1639,7 @@ textarea.form-control {
 
 .tagcloud {
 	a {
-		text-transform: uppercase;
+		
 		display: inline-block;
 		padding: 4px 10px;
 		margin-bottom: 7px;
@@ -1716,7 +1689,7 @@ textarea.form-control {
 				font-size: 20px;
 			}
 			.meta {
-				text-transform: uppercase;
+				
 				font-size: 13px;
 				letter-spacing: .1em;
 				color: #ccc;
@@ -1725,7 +1698,7 @@ textarea.form-control {
 				padding: 5px 10px;
 				background: lighten($black, 5%);
 				color: $white;
-				text-transform: uppercase;
+				
 				font-size: 11px;
 				letter-spacing: .1em;
 				font-weight: 400;
