--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -4,8 +4,8 @@
 $font-primary: 'Poppins',Arial, sans-serif;
 
 $white: #fff;
-$black: #000000;
-$primary: #55A603;
+$black: #010626;
+$primary: #0477BF;
 
 body {
 	font-family: $font-primary;
